--- a/demo.html
+++ b/demo.html
@@ -223,9 +223,8 @@
 <script type="text/javascript" src="slidePage.js"></script>
 <script type="text/javascript">
 
-
     slidePage.init({
-        'index': 1,
+        /*'index': 1,*/
         'before': function(index) {console.log('before current page '+index)},
         'after': function(index) {console.log('after current page '+index)},
         'useArrow': true,
