--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1>
 <a id="slidepage" class="anchor" href="#slidepage" aria-hidden="true"><span class="octicon octicon-link"></span></a>slidePage</h1>
 
-<p>Demo:<a href="http://lipten.link/projects/slidePage/demo.html">http://lipten.link/projects/slidePage/demo.html</a></p>
+<p>Demo:<a href="http://lipten.link/projects/slidePage/demo.html?page=1">http://lipten.link/projects/slidePage/demo.html?page=1</a></p>
 
 <h2>
 <a id="doc" class="anchor" href="#doc" aria-hidden="true"><span class="octicon octicon-link"></span></a>Doc</h2>
