Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 
 <p>Demo:<a href="http://lipten.link/projects/slidePage/demo.html?page=1">http://lipten.link/projects/slidePage/demo.html?page=1</a></p>
 
+<h3>
+<a id="-update-" class="anchor" href="#-update-" aria-hidden="true"><span class="octicon octicon-link"></span></a>-update-</h3>
+
+<p>新增url参数pege跳转指定页，优先于index参数.</p>
+
 <h2>
 <a id="doc" class="anchor" href="#doc" aria-hidden="true"><span class="octicon octicon-link"></span></a>Doc</h2>
 
@@ -89,7 +94,24 @@
 <h4>
 <a id="动效列表" class="anchor" href="#%E5%8A%A8%E6%95%88%E5%88%97%E8%A1%A8" aria-hidden="true"><span class="octicon octicon-link"></span></a>动效列表:</h4>
 
-<p>[fadeIn,fadeFlash,flaxLine,borderFlash,forceDown,slideLeft,slideRight,slideUp,slideDown,rotateIn,zoomIn,heartBeat,rollInLeft,rollInRight]</p>
+<pre>
+[
+    fadeIn,                 //渐显动画
+    fadeFlash,              //闪烁动画
+    flaxLine,               //伸展线条(基于父容器的宽度伸到100%)
+    borderFlash,            //闪烁边框(红色边框)
+    forceDown,              //重力砸下的动画(不是弹跳动画)
+    slideLeft,              //从左边渐现移动出现
+    slideRight,             //从右边渐现移动出现
+    slideUp,                //从上边渐现移动出现
+    slideDown,              //从下边渐现移动出现
+    rotateIn,               //旋转渐现出现
+    zoomIn,                 //缩放渐显出现
+    heartBeat,              //若隐若现
+    rollInLeft,             //从左边旋转渐现
+    rollInRight             //从右边旋转渐现
+]
+</pre>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/lipten/slidePage">Slidepage</a> is maintained by <a href="https://github.com/lipten">lipten</a>.</span>
