--- a/demo.html
+++ b/demo.html
@@ -228,7 +228,7 @@
         'before': function(index) {console.log('before current page '+index)},
         'after': function(index) {console.log('after current page '+index)},
         'useArrow': true,
-        'useMusic': false
+        'useMusic': false,
     });
 
 </script>
