--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 <p><img src="http://lipten.link/projects/slidePage/demo.gif" alt="demo"> </p>
 
 <h3>
+<a id="-update-v04-" class="anchor" href="#-update-v04-" aria-hidden="true"><span class="octicon octicon-link"></span></a>-update v0.4-</h3>
+
+<p>1.新增参数speed(页面过渡的动画时间，毫秒为单位)</p>
+
+<p>2.修复refresh参数的bug.</p>
+
+<h3>
 <a id="-update-v03-" class="anchor" href="#-update-v03-" aria-hidden="true"><span class="octicon octicon-link"></span></a>-update v0.3-</h3>
 
 <p>1.新增参数refresh(回滚的时候是否重新执行动画，默认为true)</p>
@@ -101,6 +108,7 @@
     'index' : 1,
     'before' : function(index){},
     'after' : function(index){},
+    'speed' : 700
     'refresh'  : true,
     'useArrow' : true,
     'useAnimation' : true,
@@ -126,6 +134,11 @@
 <a id="after" class="anchor" href="#after" aria-hidden="true"><span class="octicon octicon-link"></span></a>after</h4>
 
 <p>触发页面滚动后的回调，参数index为滚动后的页面索引号</p>
+
+<h4>
+<a id="speed" class="anchor" href="#speed" aria-hidden="true"><span class="octicon octicon-link"></span></a>speed</h4>
+
+<p>页面过渡的动画时间，以毫秒为单位</p>
 
 <h4>
 <a id="refresh" class="anchor" href="#refresh" aria-hidden="true"><span class="octicon octicon-link"></span></a>refresh</h4>
