Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,25 +27,9 @@
 <p><img src="http://lipten.link/projects/slidePage/demo.gif" alt="demo"> </p>
 
 <h3>
-<a id="-update-v04-" class="anchor" href="#-update-v04-" aria-hidden="true"><span class="octicon octicon-link"></span></a>-update v0.4-</h3>
+<a id="-update-v05-" class="anchor" href="#-update-v05-" aria-hidden="true"><span class="octicon octicon-link"></span></a>-update v0.5-</h3>
 
-<p>1.新增参数speed(页面过渡的动画时间，毫秒为单位)</p>
-
-<p>2.修复refresh参数的bug.</p>
-
-<h3>
-<a id="-update-v03-" class="anchor" href="#-update-v03-" aria-hidden="true"><span class="octicon octicon-link"></span></a>-update v0.3-</h3>
-
-<p>1.新增参数refresh(回滚的时候是否重新执行动画，默认为true)</p>
-
-<p>2.修复无page参数的bug.</p>
-
-<h3>
-<a id="-update-v02-" class="anchor" href="#-update-v02-" aria-hidden="true"><span class="octicon octicon-link"></span></a>-update v0.2-</h3>
-
-<p>1.新增url参数pege跳转指定页，优先于index参数.</p>
-
-<p>2.已加入bower大军.</p>
+<p>1.兼容了桌面系统，使用鼠标滚轮或者键盘上下键即可全屏滚动。</p>
 
 <h3>
 <a id="安装方法" class="anchor" href="#%E5%AE%89%E8%A3%85%E6%96%B9%E6%B3%95" aria-hidden="true"><span class="octicon octicon-link"></span></a>安装方法</h3>
@@ -191,6 +175,30 @@
     rollInRight             //从右边旋转渐现
 ]
 </pre>
+
+<h4>
+<a id="更新历史" class="anchor" href="#%E6%9B%B4%E6%96%B0%E5%8E%86%E5%8F%B2" aria-hidden="true"><span class="octicon octicon-link"></span></a>更新历史</h4>
+
+<h3>
+<a id="-update-v04-" class="anchor" href="#-update-v04-" aria-hidden="true"><span class="octicon octicon-link"></span></a>-update v0.4-</h3>
+
+<p>1.新增参数speed(页面过渡的动画时间，毫秒为单位)</p>
+
+<p>2.修复refresh参数的bug.</p>
+
+<h3>
+<a id="-update-v03-" class="anchor" href="#-update-v03-" aria-hidden="true"><span class="octicon octicon-link"></span></a>-update v0.3-</h3>
+
+<p>1.新增参数refresh(回滚的时候是否重新执行动画，默认为true)</p>
+
+<p>2.修复无page参数的bug.</p>
+
+<h3>
+<a id="-update-v02-" class="anchor" href="#-update-v02-" aria-hidden="true"><span class="octicon octicon-link"></span></a>-update v0.2-</h3>
+
+<p>1.新增url参数pege跳转指定页，优先于index参数.</p>
+
+<p>2.已加入bower大军.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/lipten/slidePage">slidePage</a> is maintained by <a href="https://github.com/lipten">lipten</a>.</span>
