Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <h1>
 <a id="slidepage" class="anchor" href="#slidepage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>slidePage</h1>
 
-<p>Demo:<a href="http://lipten.link/projects/slidePage/demo.html?page=1">http://lipten.link/projects/slidePage/demo.html?page=1</a></p>
+<p>Demo:<a href="http://info.lipten.net/projects/slidePage/demo.html?page=1">http://info.lipten.net/projects/slidePage/demo.html?page=1</a></p>
 
-<p><img src="http://lipten.link/projects/slidePage/demo.gif" alt="demo"> </p>
+<p><img src="http://info.lipten.net/projects/slidePage/demo.gif" alt="demo"> </p>
 
 <h3>
 <a id="-update-v06-" class="anchor" href="#-update-v06-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>-update v0.6-</h3>
@@ -212,8 +212,28 @@
 ]
 </pre>
 
+<h2>
+<a id="method" class="anchor" href="#method" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Method</h2>
+
 <h4>
-<a id="更新历史" class="anchor" href="#%E6%9B%B4%E6%96%B0%E5%8E%86%E5%8F%B2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>更新历史</h4>
+<a id="slidepageindexpageindex" class="anchor" href="#slidepageindexpageindex" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>slidePage.index(pageIndex)</h4>
+
+<p>pageIndex传入一个正整数作为页码跳转到指定页面(从1开始),不传值则返回当前页面的页码</p>
+
+<h4>
+<a id="slidepageprev" class="anchor" href="#slidepageprev" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>slidePage.prev()</h4>
+
+<p>滚动上一页</p>
+
+<h4>
+<a id="slidepagenext" class="anchor" href="#slidepagenext" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>slidePage.next()</h4>
+
+<p>滚动下一页</p>
+
+<h1></h1>
+
+<h2>
+<a id="更新历史" class="anchor" href="#%E6%9B%B4%E6%96%B0%E5%8E%86%E5%8F%B2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>更新历史</h2>
 
 <h3>
 <a id="-update-v05-" class="anchor" href="#-update-v05-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>-update v0.5-</h3>
