--- a/demo.html
+++ b/demo.html
@@ -250,8 +250,9 @@
         <div class="next-page" onclick="slidePage.next()">V</div>
     </nav>-->
 </div>
-<script src="//cdn.bootcss.com/zepto/1.0rc1/zepto.min.js"></script>
-<script type="text/javascript" src="slidePage.js"></script>
+<script src="//cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
+<script type="text/javascript" src="slidePage.min.js"></script>
+
 <script type="text/javascript">
     slidePage.init({
         /*'index': 1,*/
