Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,26 +27,20 @@
 <p><img src="http://info.lipten.net/projects/slidePage/demo.gif" alt="demo"> </p>
 
 <h3>
+<a id="-update-v062-" class="anchor" href="#-update-v062-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>-update v0.6.2-</h3>
+
+<p>1.全面支持jquery和zepto！</p>
+
+<p>2.将zepto-touch.js改造了一下，使jquery也能以同样的方式调用触屏事件;</p>
+
+<p>3.将改造后的zepto-touch.js取名为slidePage-touch.js,并与主文件合并压缩成slidePage.min.js</p>
+
+<h3>
 <a id="-update-v06-" class="anchor" href="#-update-v06-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>-update v0.6-</h3>
 
 <p>1.加入了分页组件。</p>
 
 <p>2.开放了三个方法：slidePage.index()、slidePage.next()和slidePage.prev(),详情见文档;</p>
-
-<h3>
-<a id="-update-v052-" class="anchor" href="#-update-v052-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>-update v0.5.2-</h3>
-
-<p>1.html结构有所改变：滚动的父容器除了加"slidePage-container"的class样式外还要加多个"slidePage-container"的id</p>
-
-<pre><code>&lt;div class="slidePage-container" id="slidePage-container"&gt;
-</code></pre>
-
-<h3>
-<a id="-update-v051-" class="anchor" href="#-update-v051-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>-update v0.5.1-</h3>
-
-<p>1.去除了slidePage_Mobile版本(只有十行左右的区别，没必要)。</p>
-
-<p>2.mobile版本的需求衍生成useWheel和useKeyboard两个参数来开关键盘事件和滚轮事件.</p>
 
 <h3>
 <a id="安装方法" class="anchor" href="#%E5%AE%89%E8%A3%85%E6%96%B9%E6%B3%95" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>安装方法</h3>
@@ -234,6 +228,21 @@
 
 <h2>
 <a id="更新历史" class="anchor" href="#%E6%9B%B4%E6%96%B0%E5%8E%86%E5%8F%B2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>更新历史</h2>
+
+<h3>
+<a id="-update-v052-" class="anchor" href="#-update-v052-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>-update v0.5.2-</h3>
+
+<p>1.html结构有所改变：滚动的父容器除了加"slidePage-container"的class样式外还要加多个"slidePage-container"的id</p>
+
+<pre><code>&lt;div class="slidePage-container" id="slidePage-container"&gt;
+</code></pre>
+
+<h3>
+<a id="-update-v051-" class="anchor" href="#-update-v051-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>-update v0.5.1-</h3>
+
+<p>1.去除了slidePage_Mobile版本(只有十行左右的区别，没必要)。</p>
+
+<p>2.mobile版本的需求衍生成useWheel和useKeyboard两个参数来开关键盘事件和滚轮事件.</p>
 
 <h3>
 <a id="-update-v05-" class="anchor" href="#-update-v05-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>-update v0.5-</h3>
