--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <h1>
 <a id="slidepage" class="anchor" href="#slidepage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>slidePage</h1>
 
-<p>Demo:<a href="http://info.lipten.net/projects/slidePage/demo.html?page=1">http://info.lipten.net/projects/slidePage/demo.html?page=1</a></p>
+<p>Demo:<a href="http://lipten.link/projects/slidePage/demo.html?page=1">http://lipten.link/projects/slidePage/demo.html?page=1</a></p>
 
-<p><img src="http://info.lipten.net/projects/slidePage/demo.gif" alt="demo"> </p>
+<p><img src="http://lipten.link/projects/slidePage/demo.gif" alt="demo"> </p>
 
 <h3>
 <a id="-update-v062-" class="anchor" href="#-update-v062-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>-update v0.6.2-</h3>
